lib/src/complete/snapshots/usage__complete__zsh__tests__complete_zsh.snap
---
source: lib/src/complete/zsh.rs
expression: "complete_zsh(&CompleteOptions\n{\n    usage_bin: \"usage\".to_string(), shell: \"zsh\".to_string(), bin:\n    \"mycli\".to_string(), cache_key: None, spec: None, usage_cmd:\n    Some(\"mycli complete --usage\".to_string()), source_file: None,\n})"
---
#compdef mycli
# @generated by usage-cli from usage spec
local curcontext="$curcontext"

# caching config
_usage_mycli_cache_policy() {
  if [[ -z "${lifetime}" ]]; then
    lifetime=$((60*60*4)) # 4 hours
  fi
  local -a oldp
  oldp=( "$1"(Nms+${lifetime}) )
  (( $#oldp ))
}

_mycli() {
  emulate -L zsh
  typeset -A opt_args
  local curcontext="$curcontext" cache_policy

  if ! type -p usage &> /dev/null; then
      echo >&2
      echo "Error: usage CLI not found. This is required for completions to work in mycli." >&2
      echo "See https://usage.jdx.dev for more information." >&2
      return 1
  fi

  local spec_dir="${XDG_CACHE_HOME:-$HOME/.cache}/usage"
  [[ -d "$spec_dir" ]] || mkdir -p -m 700 "$spec_dir"
  local spec_file="$spec_dir/usage__usage_spec_mycli.spec"
  mycli complete --usage >| "$spec_file"
  local -a values=() descs=() inserts=()
  local needs_menu=0 line usage_err=
  while IFS= read -r line; do
    if [[ "$line" == $'\x1f'* ]]; then
      usage_err="${line#?}"
      continue
    fi
    local -a parts=("${(@ps:\t:)line}")
    values+=("${parts[1]}")
    descs+=("${parts[2]}")
    inserts+=("${parts[3]}")
    [[ "${parts[3]}" == "'"* ]] && needs_menu=1
  done < <(
    { _usage_err="$(command usage complete-word --shell zsh -f "$spec_file" --cword=$((CURRENT - 1)) -- "${(Q)words[@]}" 2>&1 >&3 3>&-)"; } 3>&1
    (( $? )) || _usage_err=
    for _usage_l in "${(@f)_usage_err}"; do
      [[ "$_usage_l" == \[[A-Z]*\]* ]] && continue
      _usage_l="${_usage_l#"${_usage_l%%[![:space:]]*}"}"
      _usage_l="${_usage_l#Error:}"
      _usage_l="${_usage_l#"${_usage_l%%[![:space:]]*}"}"
      _usage_l="${_usage_l#× }"
      [[ -z "$_usage_l" || ( "$_usage_l" == *::* && "$_usage_l" != *' '* ) ]] && continue
      print -r -- $'\x1f'"$_usage_l"
      break
    done
  )
  [[ -n "$usage_err" ]] && _message -r "usage: ${usage_err//\%/%%}"
  (( needs_menu )) && compstate[insert]=menu
  if (( ${#inserts[@]} )); then
    local -a _usage_display=()
    local _usage_i _usage_max=0 _usage_v _usage_pad
    for _usage_v in "${values[@]}"; do
      (( ${#_usage_v} > _usage_max )) && _usage_max=${#_usage_v}
    done
    for ((_usage_i=1; _usage_i<=${#values[@]}; _usage_i++)); do
      if [[ -n "${descs[_usage_i]}" ]]; then
        _usage_pad=$(( _usage_max - ${#values[_usage_i]} ))
        _usage_display+=("${values[_usage_i]}${(l:_usage_pad:: :)}  -- ${descs[_usage_i]}")
      else
        _usage_display+=("${values[_usage_i]}")
      fi
    done
    compadd -l -d _usage_display -U -Q -S '' -a inserts
  fi
  return 0
}

if [ "$funcstack[1]" = "_mycli" ]; then
    _mycli "$@"
else
    compdef _mycli mycli
fi

# vim: noet ci pi sts=0 sw=4 ts=4
